# chinese_chess_board

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build_msvc.cmd  mp.py  test.py
src/: hello.cpp  misc.cpp  position.cpp  position.h  pyfunc.cpp  pyfunc.h  pymain.cpp  tt.cpp  types.h  vsmain.cpp
vs20xxTest/: CMakeLists.txt
